// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deprecated/Panel GreyPanel smoke-test 1`] = `
<div class="nhsuk-panel nhsuk-panel--grey">
  <p>
    Advice, tips and tools to help you make the best choices about your health and wellbeing
  </p>
</div>
`;

exports[`Deprecated/Panel PanelGroup smoke-test 1`] = `
<div class="nhsuk-grid-row nhsuk-panel-group">
  <div class="nhsuk-grid-column-one-half nhsuk-panel-group__item">
    <div class="nhsuk-panel">
      <h3>
        Eat well
      </h3>
      <p>
        All you need to know about the major food groups and a healthy, balanced diet
      </p>
    </div>
  </div>
  <div class="nhsuk-grid-column-one-half nhsuk-panel-group__item">
    <div class="nhsuk-panel">
      <h3>
        Healthy weight
      </h3>
      <p>
        Check your BMI using our healthy weight calculator and find out if you're a healthy weight
      </p>
    </div>
  </div>
</div>
<div class="nhsuk-grid-row nhsuk-panel-group">
  <div class="nhsuk-grid-column-one-half nhsuk-panel-group__item">
    <div class="nhsuk-panel">
      <h3>
        Excercise
      </h3>
      <p>
        Programmes, workouts and tips to get you moving and improve your fitness and wellbeing
      </p>
    </div>
  </div>
  <div class="nhsuk-grid-column-one-half nhsuk-panel-group__item">
    <div class="nhsuk-panel">
      <h3>
        Sleep and tiredness
      </h3>
      <p>
        Find out how to sleep well and the common lifestyle factors that are making you tired
      </p>
    </div>
  </div>
</div>
`;

exports[`Deprecated/Panel Standard smoke-test 1`] = `
<div class="nhsuk-panel">
  <h3>
    Live Well
  </h3>
  <p>
    Advice, tips and tools to help you make the best choices about your health and wellbeing
  </p>
</div>
`;

exports[`Deprecated/Panel WithLabel smoke-test 1`] = `
<div class="nhsuk-panel-with-label">
  <h3 class="nhsuk-panel-with-label__label">
    Live well
  </h3>
  <p>
    Advice, tips and tools to help you make the best choices about your health and wellbeing
  </p>
</div>
`;
